tests/compile-fail/integration_suite__integration__anm_features__image_source_in_std.snap
---
source: tests/integration/anm_features.rs
expression: stderr
---
error: unexpected image_source
   ┌─ <input>:18:30
   │
18 │         #pragma image_source "tests/integration/resources/th12-embedded-image-source.anm"
   │                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ image_source not valid in this format


